--- a/core/sh/templates/switch/create.html
+++ b/core/sh/templates/switch/create.html
@@ -98,9 +98,9 @@
                           <label for="id_province">Provincia:</label>
                           {{ form.province }}
                           {% if form.province.errors %}
-                          <div class="invalid-feedback d-block">
+                            <div class="invalid-feedback d-block">
                             {{ form.province.errors|join:"<br>" }}
-                          </div>
+                            </div>
                           {% endif %}
                         </div>
                         <div class="form-group col-12">
@@ -166,28 +166,27 @@
             <div class="card-header d-flex justify-content-between align-items-center {{bg_color}} ">
               <h3 class="card-title">Seleccione el Rack y la Posición</h3>
             </div>
-              <div class="card-body">
-                <div class="row">
-                  <div class="form-group col-6">
-                    <label for="id_rack">Rack:</label>
-                    {{ form.rack }}
-                    {% if form.rack.errors %}
-                      <div class="invalid-feedback d-block">
-                        {{ form.rack.errors|join:"<br>" }}
-                      </div>
-                    {% endif %}
-                  </div>
-                  <div class="form-group col-6">
-                    <label for="id_ip">Posición en el Rack:</label>
-                    {{ form.switch_rack_pos }}
-                    {% if form.switch_rack_pos.errors %}
-                      <div class="invalid-feedback d-block">
-                        {{ form.switch_rack_pos.errors|join:"<br>" }}
-                      </div>
-                    {% endif %}
-                  </div>
-                  <small>*.Oficina y sus filtros se pueden utilizar para filtrar el Rack</small>
+            <div class="card-body">
+              <div class="row">
+                <div class="form-group col-6">
+                  <label for="id_rack">Rack:</label>
+                  {{ form.rack }}
+                  {% if form.rack.errors %}
+                    <div class="invalid-feedback d-block">
+                      {{ form.rack.errors|join:"<br>" }}
+                    </div>
+                  {% endif %}
                 </div>
+                <div class="form-group col-6">
+                  <label for="id_ip">Posición en el Rack:</label>
+                  {{ form.switch_rack_pos }}
+                  {% if form.switch_rack_pos.errors %}
+                    <div class="invalid-feedback d-block">
+                      {{ form.switch_rack_pos.errors|join:"<br>" }}
+                    </div>
+                  {% endif %}
+                </div>
+                <small>*.Oficina y sus filtros se pueden utilizar para filtrar el Rack</small>
               </div>
             </div>
           </div>
@@ -207,8 +206,8 @@
       <div id="filter-port-cards" class="d-none">
         <div class="row">
           <div class="container">
-            <div class="card my-1">
-              <div class="card-header {{bg_color}}">
+            <div class="card text-white bg-secondary my-1">
+              <div class="card-header">
                 Filtrar por Conexión
               </div>
               <div class="card-body row">
@@ -266,7 +265,6 @@
                   </div>
                   {% endif %}
                 </div>
-                <small class="form-text text-muted">* Seleccionar Oficina para realizar el filtrado de puertos</small>
               </div>
             </div>
           </div>
@@ -299,11 +297,9 @@
         </div>
         {% endif %}
       </div>
-      <small class="form-text text-muted">* Seleccione un único puerto, solo desde el que ingresa directamente la conexión al Switch</small>
     </div>
   </div>
 </div>
-
 
 {% endblock form %}
 
