--- a/core/sh/templates/office/create.html
+++ b/core/sh/templates/office/create.html
@@ -18,35 +18,21 @@
       </h3>
     </div>
     <div class="card-body">
-      <button id="toggle-office-filters" class="btn {{filter_btn_color}} mb-1" type="button"> Filtros para Edificios y Dependencias <i class="fa fa-filter"></i></button>
-      <div id="filter-office-cards" class="d-none">
-        <div class="row">
-          <div class="container">
-          <!-- Tarjeta Filtros Geográficos -->
-            <div class="card text-white bg-secondary mt-1">
-              <div class="card-header">
-                Filtrar Edificios y Dependencias
+      <div class="container">
+      <!-- Tarjeta Filtros Geográficos -->
+        <div class="card text-white bg-secondary mt-1">
+          <div class="card-header">
+            Filtrar por Localidad
+          </div>
+          <div class="card-body row">
+            <div class="form-group col-12">
+              <label for="id_location">Localidad:</label> <button type="button" class="btn btn-sm btn-dark ml-2 mb-1" id="location_add"><i class="fas fa-plus"></i></button>
+              {{ form.location }}
+              {% if form.location.errors %}
+              <div class="invalid-feedback d-block">
+                {{ form.location.errors|join:"<br>" }}
               </div>
-              <div class="card-body row">
-                <div class="form-group col-12">
-                  <label for="id_province">Provincia:</label>
-                  {{ form.province }}
-                  {% if form.province.errors %}
-                  <div class="invalid-feedback d-block">
-                    {{ form.province.errors|join:"<br>" }}
-                  </div>
-                  {% endif %}
-                </div>
-                <div class="form-group col-12">
-                  <label for="id_location">Localidad:</label>
-                  {{ form.location }}
-                  {% if form.location.errors %}
-                  <div class="invalid-feedback d-block">
-                    {{ form.location.errors|join:"<br>" }}
-                  </div>
-                  {% endif %}
-                </div>
-              </div>
+              {% endif %}
             </div>
           </div>
         </div>
@@ -86,7 +72,7 @@
     <div class="card-body">
       <div class="form-group">
         <div class="mt-2">
-          <label for="id_edifice_main">Ubicación de la Oficina: </label>  <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="loc_add"><i class="fas fa-plus"></i></button>
+          <label for="id_loc">Ubicación de la Oficina: </label>  <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="loc_add"><i class="fas fa-plus"></i></button>
         </div>
         {{ form.loc }}
         {% if form.loc.errors %}
@@ -138,98 +124,6 @@
 {% endblock form_scripts %}
 
 {% block modals %}
-<div class="modal fade" id="dependencyModal" tabindex="-1" aria-labelledby="dependencyModalLabel" aria-hidden="true">
-  <form method="post" action="{% url 'sh:dependency_add' %}" id="dependencyForm">  {% csrf_token %}
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="dependencyModalLabel">Agregar una Dependencia</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div class="form-group">
-            <label for="id_location_edifice_modal">Localidad: </label>  <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="location_add_from_dependency"><i class="fas fa-plus"></i></button>
-            {{ dependency_add.location }}
-          </div>
-          <div class="form-group">
-            <label for="id_edifice_edifice_modal">Dependencia: </label>  {{ dependency_add.dependency }}
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
-          <button type="submit" class="btn {{btn_color}}"><i class="fa fa-save"></i> Guardar</button>
-        </div>
-      </div>
-    </div>
-  </form>
-</div>
-
-<div class="modal fade" id="edificeModal" tabindex="-1" aria-labelledby="edificeModalLabel" aria-hidden="true">
-  <form method="post" action="{% url 'sh:edifice_add' %}" id="edificeForm">  {% csrf_token %}
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="edificeModalLabel">Agregar un Edificio</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div class="form-group">
-            <label for="id_location_edifice_modal">Localidad: </label>  <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="location_add_from_edifice"><i class="fas fa-plus"></i></button>
-            {{ edifice_add.location }}
-          </div>
-          <div class="form-group">
-            <label for="id_edifice_edifice_modal">Edificio: </label>  {{ edifice_add.edifice }}
-          </div>
-          <div class="form-group">
-            <label for="id_address_edifice_modal">Domicilio: </label>  {{ edifice_add.address }}
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
-          <button type="submit" class="btn {{btn_color}}"><i class="fa fa-save"></i> Guardar</button>
-        </div>
-      </div>
-    </div>
-  </form>
-</div>
-
-<div class="modal fade" id="locModal" tabindex="-1" aria-labelledby="locModalLabel" aria-hidden="true">
-  <form method="post" action="{% url 'sh:office_loc_add' %}" id="locForm">  {% csrf_token %}
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="locModalLabel">Agregar una Ubicación de Oficina</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div class="form-group">
-            <label for="id_edifice_loc_modal">Edificio: </label>  <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="edifice_add_from_loc"><i class="fas fa-plus"></i></button>
-            {{ loc_add.edifice }}
-          </div>
-          <div class="form-group">
-            <label for="id_floor_loc_modal">Piso: </label>  {{ loc_add.floor }}
-          </div>
-          <div class="form-group">
-            <label for="id_wing_loc_modal">Ala: </label>  {{ loc_add.wing }}
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
-          <button type="submit" class="btn {{btn_color}}"><i class="fa fa-save"></i> Guardar</button>
-        </div>
-      </div>
-    </div>
-  </form>
-</div>
-{% endblock modals %}
-
-{% block modal_in %}
 <div class="modal fade" id="locationModal" tabindex="-1" aria-labelledby="locationModalLabel" aria-hidden="true">
   <form method="post" action="{% url 'sh:location_add' %}" id="locationForm">  {% csrf_token %}
     <div class="modal-dialog">
@@ -258,6 +152,103 @@
   </form>
 </div>
 
+<div class="modal fade" id="dependencyModal" tabindex="-1" aria-labelledby="dependencyModalLabel" aria-hidden="true">
+  <form method="post" action="{% url 'sh:dependency_add' %}" id="dependencyForm">  {% csrf_token %}
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="dependencyModalLabel">Agregar una Dependencia</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="id_location_edifice_modal">Localidad: </label>
+            {{ dependency_add.location }}
+          </div>
+          <div class="form-group">
+            <label for="id_edifice_edifice_modal">Dependencia: </label>
+            {{ dependency_add.dependency }}
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
+          <button type="submit" class="btn {{btn_color}}"><i class="fa fa-save"></i> Guardar</button>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
+
+<div class="modal fade" id="edificeModal" tabindex="-1" aria-labelledby="edificeModalLabel" aria-hidden="true">
+  <form method="post" action="{% url 'sh:edifice_add' %}" id="edificeForm">  {% csrf_token %}
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="edificeModalLabel">Agregar un Edificio</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="id_location_edifice_modal">Localidad: </label>
+            {{ edifice_add.location }}
+          </div>
+          <div class="form-group">
+            <label for="id_edifice_edifice_modal">Edificio: </label>
+            {{ edifice_add.edifice }}
+          </div>
+          <div class="form-group">
+            <label for="id_address_edifice_modal">Domicilio: </label>
+            {{ edifice_add.address }}
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
+          <button type="submit" class="btn {{btn_color}}"><i class="fa fa-save"></i> Guardar</button>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
+
+<div class="modal fade" id="locModal" tabindex="-1" aria-labelledby="locModalLabel" aria-hidden="true">
+  <form method="post" action="{% url 'sh:office_loc_add' %}" id="locForm">  {% csrf_token %}
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="locModalLabel">Agregar una Ubicación de Oficina</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="id_edifice_loc_modal">Edificio: </label>
+            {{ loc_add.edifice }}
+          </div>
+          <div class="form-group">
+            <label for="id_floor_loc_modal">Piso: </label>
+            {{ loc_add.floor }}
+          </div>
+          <div class="form-group">
+            <label for="id_wing_loc_modal">Ala: </label>
+            {{ loc_add.wing }}
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
+          <button type="submit" class="btn {{btn_color}}"><i class="fa fa-save"></i> Guardar</button>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
+{% endblock modals %}
+
+{% block modal_in %}
 <div class="modal fade" id="provinceModal" tabindex="-1" aria-labelledby="provinceModalLabel" aria-hidden="true">
   <form method="post" action="{% url 'sh:province_add' %}" id="provinceForm"> {% csrf_token %}
     <div class="modal-dialog">
