--- a/core/sh/templates/location/list.html
+++ b/core/sh/templates/location/list.html
@@ -8,8 +8,8 @@
 
 {% block columns %}
 
-  <th scope="col" style="width: 10%;">Id</thr>
-  <th scope="col" style="width: 30%;">Provincia</thr>
+  <th scope="col" style="width: 10%;">Nro. de Distrito</th>
+  <th scope="col" style="width: 30%;">Provincia</th>
   <th scope="col" style="width: 50%;">Localidad</th>
   <th scope="col" style="width: 10%;">Opciones</th>
 
