--- a/core/sh/templates/province/list.html
+++ b/core/sh/templates/province/list.html
@@ -8,10 +8,9 @@
 
 {% block columns %}
 
-  <th scope="col" style="width: 10%;">Id</thr>
-  <th scope="col" style="width: 10%;">Número de Distrito</thr>
+  <th scope="col" style="width: 15%;">Número de Distrito</th>
   <th scope="col" style="width: 60%;">Provincia</th>
-  <th scope="col" style="width: 30%;">Opciones</th>
+  <th scope="col" style="width: 35%;">Opciones</th>
 
 {% endblock columns %}
 
