--- a/core/sh/templates/location/create.html
+++ b/core/sh/templates/location/create.html
@@ -49,7 +49,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Agregar una Provincia</h5>
+          <h5 class="modal-title" id="provinceModalLabel">Agregar una Provincia</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
