--- a/core/sh/templates/office_loc/list.html
+++ b/core/sh/templates/office_loc/list.html
@@ -9,10 +9,9 @@
 
 {% block columns %}
 
-  <th scope="col" style="width: 5%;">Id</th>
   <th scope="col" style="width: 15%;">Provincia</th>
   <th scope="col" style="width: 15%;">Localidad</th>
-  <th scope="col" style="width: 20%;">Edificio</th>
+  <th scope="col" style="width: 25%;">Edificio</th>
   <th scope="col" style="width: 5%;">Piso</th>
   <th scope="col" style="width: 25%;">Ala</th>
   <th scope="col" style="width: 15%;">Opciones</th>
@@ -28,7 +27,7 @@
 {% block add_button %}
 
 <a href="{{ create_url }}" type="button" class="btn btn-primary" id="{{btn_add_id}}">
-  <i class="fas fa-plus"></i> Agregar Locación de Oficina
+  <i class="fas fa-plus"></i> Agregar Ubicación de Oficina
 </a>
 
 {% endblock add_button %}
