--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -58,21 +58,21 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="{% url 'sh:edifice_list' %}" class="nav-link">
-                    <i class="fa-solid fa-building"></i>
-                    <p>Edificios</p>
-                  </a>
-                </li>
-                <li class="nav-item">
                   <a href="{% url 'sh:dependency_list' %}" class="nav-link">
                     <i class="fa-solid fa-gavel"></i>
                     <p>Dependencia</p>
                   </a>
                 </li>
                 <li class="nav-item">
+                  <a href="{% url 'sh:edifice_list' %}" class="nav-link">
+                    <i class="fa-solid fa-building"></i>
+                    <p>Edificios</p>
+                  </a>
+                </li>
+                <li class="nav-item">
                   <a href="{% url 'sh:office_loc_list' %}" class="nav-link">
                     <i class="fa-solid fa-building"></i>
-                    <p>Locación de Oficina</p>
+                    <p>Ubicación de Oficina</p>
                   </a>
                 </li>
                 <li class="nav-item">
