--- a/core/sh/templates/office/create.html
+++ b/core/sh/templates/office/create.html
@@ -20,22 +20,31 @@
     <div class="card-body">
       <div class="container">
       <!-- Tarjeta Filtros Geográficos -->
-        <div class="card text-white bg-secondary mt-1">
-          <div class="card-header">
-            Filtrar por Localidad
-          </div>
-          <div class="card-body row">
-            <div class="form-group col-12">
-              <label for="id_location">Localidad:</label> <button type="button" class="btn btn-sm btn-dark ml-2 mb-1" id="location_add"><i class="fas fa-plus"></i></button>
-              {{ form.location }}
-              {% if form.location.errors %}
-              <div class="invalid-feedback d-block">
-                {{ form.location.errors|join:"<br>" }}
-              </div>
-              {% endif %}
-            </div>
-          </div>
+      <div class="card text-white bg-secondary mt-1">
+        <div class="card-header">
+            Filtros <i class="fas fa-filter"></i>
         </div>
+        <div class="card-body row">
+            <div class="form-group col-6">
+                <label for="id_province">Provincia:</label> <button type="button" class="btn btn-sm btn-dark ml-2 mb-1" id="province_add"><i class="fas fa-plus"></i></button>
+                {{ form.province }}
+                {% if form.province.errors %}
+                <div class="invalid-feedback d-block">
+                    {{ form.province.errors|join:"<br>" }}
+                </div>
+                {% endif %}
+            </div>
+            <div class="form-group col-6">
+                <label for="id_location">Localidad:</label> <button type="button" class="btn btn-sm btn-dark ml-2 mb-1" id="location_add"><i class="fas fa-plus"></i></button>
+                {{ form.location }}
+                {% if form.location.errors %}
+                <div class="invalid-feedback d-block">
+                    {{ form.location.errors|join:"<br>" }}
+                </div>
+                {% endif %}
+            </div>
+        </div>
+    </div>
       </div>
       <div class="form-group mt-2">
         <div class="mt-2">
